[project]
name = "vit-ultrasound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "nibabel>=5.4.2",
    "numpy>=2.4.3",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.1.1",
    "pydicom>=3.0.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
]
[tool.uv]
link-mode = "copy"